--- a/index.css
+++ b/index.css
@@ -23,6 +23,11 @@ body {
     background: #555
 }
 
+#config-input {
+    font-family: monospace;
+    overflow-x: auto;
+}
+
 #enc-area {
     width: 100%;
     height: 200px;
